footer alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -58,8 +58,9 @@ input[type=submit]:hover{
 
 .footer{
   position: absolute;
-  padding: 1%;
+  padding: 2%;
   width: 100%;
+  height: 10%;
   overflow: hidden;
   background-color: #474c54;
   color: white;
@@ -102,6 +103,14 @@ input[type=submit]:hover{
   color: #b0bcf1;
 }
 
-.footerphone{
-  
+#left {
+  left: -10%;
+}
+
+#mid {
+  left: 10%;
+}
+
+#right {
+  left: 20%;
 }
